@@ -1,3 +1,4 @@
+    - Window title now includes the full path to the current file.
     - Entries can now be marked in a series of different colors. Automarking of imported
       entries is now done in separate color without affecting other marked entries.
     - Added new feature (Tools -> Scan database... -> Resolve duplicate BibTeX keys) to
